--- a/src/styles/views/GameScreen.scss
+++ b/src/styles/views/GameScreen.scss
@@ -11,9 +11,8 @@
 }
 .gamescreen-troops-container {
   display: flex;
-  margin-right: 5%;
-  margin-top: 0%;
-  margin-bottom: 5%;
+  margin: 5%;
+  max-height: 100%;
 }
 .gamescreen-leave-container {
   display: flex;
@@ -40,7 +39,7 @@
   transition: transform 0.2s, background-color 0.2s;
 }
 
-.dynbut.gamescreen-buttons-container:disabled {
+.gamescreen-buttons-container:disabled {
   background-color: #ccc;
   border-color: #999;
   color: #666;
@@ -52,6 +51,7 @@
 
 .gamescreen-buttons-container-troops {
   cursor: default;
+  padding: 25px;
 }
 
 .gamescreen-buttons-container:hover {
@@ -69,18 +69,19 @@
   align-items: center;
   flex-direction: row;
   gap: 10px; /* Adds space between buttons */
-  max-height: 30%;
+  max-height: 20%;
   width: 100%; /* Ensure the label takes full width of its container */
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
+  margin-bottom: 1px;
 }
 
 .gamescreen-selection-split {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  align-items: center;
-  margin-top: -0.5%;
+  margin-top: 1px;
   max-height: 90%;
+  gap: 1px;
 }
 
 /* Base styles for the selection buttons */
@@ -90,6 +91,7 @@
   align-items: center;
   border: 2px solid #ccc;
   border-radius: 8px;
+  min-height: 80%;
   max-width: 30%;
   //max-width: 100%; /* Prevent button from exceeding container width */
   font-size: 1rem;
@@ -98,11 +100,10 @@
   color: #333;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s, transform 0.3s;
-  margin-bottom: -5%;
+  margin-bottom: 1px;
   flex-grow: 1; /* Allow button to grow within flex container */
   padding: 5px 0px; /* Add padding for better button size adjustment */
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
-  height: 60%; /* Allow height to adjust automatically */
   min-height: 10px; /* Ensure a minimum height for usability */
   max-height: 25px; /* Prevent the button from becoming too tall */
 }
